--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ video{
 .sound-picker button
 {
 	color: white;
-	width: 100px;
+	width: 120px;
 	height:30px;
 	background: black; 
 	border: 2px solid white;
@@ -148,7 +148,7 @@ video{
 }
 .time-select button:hover{
 	color: black;
-	background: none;
+	background: white;
 	border: 2px solid black;
 }
 .sound-picker button{
