--- a/style.css
+++ b/style.css
@@ -1,13 +1,22 @@
 *{
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;;
+	box-sizing: border-box;
+
+}
+.containeer{
+	background-color: black;
+	background: url('bg.jpg');
+	background-repeat: no-repeat;
 }
 .app{
 	height: 100vh;
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
+	background: url('bg2.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 .time-select, .sound-picker,.player-container{
 	height: 80%;
@@ -28,6 +37,7 @@
 	left: 50%;
 	transform: translate(-50%,-50%)rotate( -90deg);
 	pointer-events: none;
+	background:none;
 }
 
 
@@ -93,6 +103,7 @@ video{
 
 .sound-picker button img{
 	height: 100%;
+	background:none;
 }
 
 @media screen and (max-width: 800px) {
@@ -118,6 +129,7 @@ video{
 	left: 60%;
 	transform: translate(-50%,-50%)rotate( -90deg);
 	pointer-events: none;
+	background:none;
 }
 
 .play{
@@ -134,9 +146,10 @@ video{
 	z-index: -10;
 }
 .time-select button,
+.sound-picker button
 {
 	color: white;
-	width: 120px;
+	width: 110px;
 	height:30px;
 	background: black; 
 	border: 2px solid white;
@@ -147,7 +160,7 @@ video{
 }
 .time-select button:hover{
 	color: black;
-	background: white;
+	background: none;
 	border: 2px solid black;
 }
 .sound-picker button{
@@ -168,6 +181,7 @@ video{
 
 .sound-picker button img{
 	height: 100%;
+	background:none;
 }
 .time-display{
 	position: relative;
@@ -184,3 +198,6 @@ video{
 }
 
 }
+
+
+
