--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
-	background: url('bg2.jpg');
+	background-image: url('bg2.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
 }
